[gd_scene load_steps=7 format=2]

[ext_resource path="res://Item/items_4.png" type="Texture" id=1]
[ext_resource path="res://Item/items_3.png" type="Texture" id=2]
[ext_resource path="res://Item/items_1.png" type="Texture" id=3]
[ext_resource path="res://Item/items_2.png" type="Texture" id=4]
[ext_resource path="res://Item/Item.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Item" type="Area2D"]
script = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CHEST" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="GOLD" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="LADDER_DOWN" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="LADDER_UP" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Item_area_entered"]
